Automatically backed up by Learn

--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,4 +1,15 @@
 <h1>Sign Up Below:</h1>
 <form class="" action="/registrations" method="post">
-
+  <label>name</label>
+    <br/>
+    <input type="text" name="name">
+    <br/>
+    <label>email</label>
+    <br/>
+    <input type="text" name="email">
+    <br/>
+    <label>password</label>
+    <br/>
+    <input type="password" name="" value="password">
+    <input type="submit" name="" value="sign up">
 </form>
